--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,3 +1,31 @@
+#main-title {
+  display: block;
+  color: white;
+  padding-top: 1rem;
+  text-align: center;
+  margin-bottom: 0.5rem;
+  transform: offset(-50%, -50%);
+}
+
+#main-title > p,
+#main-title > h1 {
+  display: inline;
+  font-family: 'Optima', 'Comfortaa', sans-serif;
+}
+
+#main-title > h1 {
+  font-weight: 500;
+  cursor: pointer;
+}
+
+#main-title > h1:hover {
+  opacity: 0.85;
+}
+
+#main-title > p {
+  font-weight: 300;
+}
+
 nav > ul {
   padding-top: 1.5rem;
   margin: 0;
@@ -9,6 +37,7 @@ nav > ul > li {
   margin: 0.5rem;
   display: inline;
   color: white;
+  font-family: 'Optima', 'Comfortaa', sans-serif;
   cursor: pointer;
   transform: all 0.3s ease;
 }
