--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,22 +1,10 @@
-#main-title {
-  display: block;
-  color: white;
-  margin-bottom: 0.5rem;
-  transform: offset(-50%, -50%);
-  text-shadow: 1px 1px 1px black;
-}
-
-#main-title > p,
-#main-title > h1 {
-  display: inline;
-}
-
 #home-container {
   width: 100%;
   height: 90vh;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 3rem 0;
 }
 
 .card-container {
@@ -28,7 +16,7 @@
   display: none;
   position: relative;
   top: 600px;
-  background-color: white;
+  background-color: rgba(255,255,255,0.90);
   border-radius: 3px;
   padding: 1rem 1.5rem;
   max-height: 80vw;
@@ -47,9 +35,9 @@
   .card-show {
     position: absolute;
     width: 100vw;
-    height: 95vh;
     max-height: none;
-    top: 68px;
+    height: calc(100vh - 160px);
+    top: 160px;
     left: 0;
   }
 }
