--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,15 +1,19 @@
 #home-container {
-  width: 100%;
-  height: 90vh;
+  width: 60%;
+  height: 85vh;
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  padding: 3rem 0;
+  overflow-y: scroll;
+  margin: 3rem auto;
 }
+
+
 
 .card-container {
   overflow-x: hidden;
-  max-width: 60%;
+  width: 100%;
+  margin-bottom: 2rem;
 }
 
 .card {
@@ -18,7 +22,7 @@
   top: 600px;
   background-color: rgba(255,255,255,0.90);
   border-radius: 3px;
-  padding: 1rem 1.5rem;
+  padding: 1rem 1.5rem 65px;
   max-height: 80vw;
   overflow: scroll;
 
