--- a/src/components/list_item.css
+++ b/src/components/list_item.css
@@ -1,15 +1,14 @@
 .list-item {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
-  margin: 0.5rem;
   transform: all 0.3s ease;
-  text-align: center;
+  height: 400px;
 }
 
 .list-image {
   height: auto;
-  max-width: 100%;
-  max-height: 400px;
   margin: 0 auto;
 }
 
