--- a/src/components/home.css
+++ b/src/components/home.css
@@ -8,7 +8,21 @@
   margin: 3rem auto;
 }
 
+#map {
+  width: 100%;
+}
 
+#obrigado {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4rem 3rem;
+  text-align: center;
+}
+
+#obrigado h3 {
+  margin: auto;
+}
 
 .card-container {
   overflow-x: hidden;
