--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -256,7 +256,7 @@ h2 {
   margin-bottom: 1.45rem;
   color: inherit;
   font-family: 'Optima', 'Comfortaa', sans-serif;
-  font-weight: bold;
+  font-weight: 500;
   text-rendering: optimizeLegibility;
   font-size: 1.62671rem;
   line-height: 1.1;
@@ -272,9 +272,9 @@ h3 {
   margin-bottom: 1.45rem;
   color: inherit;
   font-family: 'Optima', 'Comfortaa', sans-serif;
-  font-weight: bold;
+  font-weight: 300;
   text-rendering: optimizeLegibility;
-  font-size: 1.38316rem;
+  font-size: 1.25rem;
   line-height: 1.1;
 }
 h4 {
