--- a/src/components/present_form.css
+++ b/src/components/present_form.css
@@ -9,7 +9,12 @@
     border: 1px solid rgba(0,0,0,0.5);
     border-radius: 3px;
     padding: 0.25rem 0.75rem;
-    min-width: 90%;
+    width: 100%;
+}
+
+.form-modal {
+    min-width: 50vw;
+    overflow-y: scroll;
 }
 
 .form-submit {
