Add more to list

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -7,14 +7,19 @@
   transform: offset(-50%, -50%);
 }
 
+#dot {
+  opacity: 0;
+}
+
 #main-title > p,
 #main-title > h1 {
   display: inline;
-  font-family: 'Optima', 'Comfortaa', sans-serif;
 }
 
 #main-title > h1 {
+  font-family: 'Optima', 'Comfortaa', sans-serif;
   font-weight: 500;
+  margin-right: 14px;
   cursor: pointer;
 }
 
@@ -24,6 +29,7 @@
 
 #main-title > p {
   font-weight: 300;
+  color: white;
 }
 
 nav > ul {
