--- a/src/components/home.css
+++ b/src/components/home.css
@@ -12,13 +12,14 @@
   width: 100%;
 }
 
+#contactos p strong {
+  font-weight: 500;
+}
+
 #obrigado {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: rgba(255,255,255,0.2);
   padding: 4rem 3rem;
   text-align: center;
-  flex-direction: column;
 }
 
 #obrigado h3 {
