--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -388,6 +388,8 @@ p {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
+  font-family: 'Avenir', 'Open Sans', sans-serif;
+  color: #444;
 }
 figure {
   margin-left: 0;
