--- a/src/components/present_form.css
+++ b/src/components/present_form.css
@@ -24,6 +24,7 @@
     padding: 0.25rem 0.75rem;
     transform: all 0.3s ease;
     cursor: pointer;
+    margin-right: 1rem;
 }
 
 .form-submit:hover {
