--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text:400,600&display=swap');
 
 html {
   /* font-family: 'Open Sans', sans-serif; */
-  font-family: 'Optima', 'Comfortaa', sans-serif;
+  font-family: 'Crimson Text', serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -208,7 +208,7 @@ body {
   height: 100vh;
   overflow-y: hidden;
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Crimson Text', serif;
   /* font-family: 'Optima', 'Comfortaa', sans-serif; */
   font-weight: normal;
   word-wrap: break-word;
@@ -239,7 +239,7 @@ h1 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Optima', 'Comfortaa', sans-serif;
+  font-family: 'Crimson Text', serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
@@ -255,7 +255,7 @@ h2 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Optima', 'Comfortaa', sans-serif;
+  font-family: 'Crimson Text', serif;
   font-weight: 500;
   text-rendering: optimizeLegibility;
   font-size: 1.62671rem;
@@ -271,7 +271,7 @@ h3 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Optima', 'Comfortaa', sans-serif;
+  font-family: 'Crimson Text', serif;
   font-weight: 300;
   text-rendering: optimizeLegibility;
   font-size: 1.25rem;
@@ -287,7 +287,7 @@ h4 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Optima', 'Comfortaa', sans-serif;
+  font-family: 'Crimson Text', serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1rem;
@@ -303,7 +303,7 @@ h5 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: Optima, Comfortaa, sans-serif;
+  font-family: 'Crimson Text', serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.85028rem;
@@ -319,7 +319,7 @@ h6 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: Optima, Comfortaa, sans-serif;
+  font-family: 'Crimson Text', serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.78405rem;
