--- a/src/components/list_item.css
+++ b/src/components/list_item.css
@@ -22,7 +22,7 @@
   position: absolute;
   bottom: 0px;
   text-align: center;
-  font-family: 'Optima', 'Comfortaa', sans-serif;
+  font-family: 'Crimson Text', serif;
   color: black;
   width: 100%;
   margin: 0 auto;
