--- a/src/components/present_form.css
+++ b/src/components/present_form.css
@@ -12,6 +12,20 @@
     width: 100%;
 }
 
+.form-group {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-group .form-field {
+    flex: 1;
+    margin-bottom: 0;
+}
+
+.form-group .form-field:first-child {
+    margin-right: 1rem;
+}
+
 .form-modal {
     min-width: 50vw;
     overflow-y: scroll;
